--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,69 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
+  <ion-navbar color="primary">
+      <button ion-button large clear menuToggle icon-only >
+        <ion-icon name='menu'></ion-icon>
+      </button>
+          <ion-searchbar></ion-searchbar>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+
+<ion-content>
+  <ion-slides pager>
+
+    <ion-slide style="background-color: green">
+      <h2>Slide 1</h2>
+    </ion-slide>
+
+    <ion-slide style="background-color: blue">
+      <h2>Slide 2</h2>
+    </ion-slide>
+
+    <ion-slide style="background-color: red">
+      <h2>Slide 3</h2>
+    </ion-slide>
+
+  </ion-slides>
+
+
+  <ion-grid text-center no-padding>
+
+    <ion-row>
+
+      <ion-col col-6>
+        <div><img src=""> <p>Baju Koko</p></div>
+      </ion-col>
+
+      <ion-col col-6>
+        <div><img src=""> <p>Mukena Dewasa</p></div>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+
+      <ion-col col-6>
+        <div><img src=""> <p>Mukena Anak</p></div>
+      </ion-col>
+
+      <ion-col col-6>
+        <div><img src=""> <p>Sarung Anak</p></div>
+      </ion-col>
+
+    </ion-row>
+
+    <ion-row>
+
+      <ion-col col-6>
+        <div><img src=""> <p>Mukena Tas Ekslusif</p></div>
+      </ion-col>
+
+      <ion-col col-6>
+        <div><img src=""> <p>Mukena Couple</p></div>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
 </ion-content>
