--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,17 @@
+<!--belum login-->
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Best Seller" tabIcon="md-star"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="md-call"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Cart" tabIcon="cart"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="More" tabIcon="more"></ion-tab>
 </ion-tabs>
+<!--&lt;!&ndash;sudah login&ndash;&gt;-->
+<!--<ion-tabs *ngIf="">-->
+  <!--<ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>-->
+  <!--<ion-tab [root]="tab2Root" tabTitle="Kategori" tabIcon="cart"></ion-tab>-->
+  <!--<ion-tab [root]="tab3Root" tabTitle="Daftar" tabIcon="more"></ion-tab>-->
+  <!--<ion-tab [root]="tab2Root" tabTitle="Account" tabIcon="cart"></ion-tab>-->
+  <!--<ion-tab [root]="tab3Root" tabTitle="More" tabIcon="more"></ion-tab>-->
+  <!--<ion-tab [root]="tab2Root" tabTitle="Account" tabIcon="cart"></ion-tab>-->
+  <!--<ion-tab [root]="tab3Root" tabTitle="Logout" tabIcon="more"></ion-tab>-->
+<!--</ion-tabs>-->
