api intergration product

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,6 +8,9 @@
 
   <ion-navbar color="primary">
     <ion-title>Contact</ion-title>
+    <button ion-button large clear menuToggle icon-only >
+        <ion-icon name='menu'></ion-icon>
+      </button>
   </ion-navbar>
 
 </ion-header>
