update category and product

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
 
 
 <ion-content>
-  <ion-slides pager>
+  <!-- <ion-slides pager>
 
     <ion-slide style="background-color: green">
       <h2>Slide 1</h2>
@@ -24,7 +24,7 @@
       <h2>Slide 3</h2>
     </ion-slide>
 
-  </ion-slides>
+  </ion-slides> -->
 
 
   <ion-grid text-center no-padding>
