--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,7 +31,7 @@
 
     <ion-row>
 
-      <ion-col col-6 *ngFor="let item of items; let i = index;" (click)="doDetailProducts()">
+      <ion-col col-6 *ngFor="let item of items; let i = index;" (click)="doDetailProducts(item)">
         <div *ngIf = "i < 10"><img src="{{item.images}}"> <p>{{item.name}}</p>
         </div>
       </ion-col>
