--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -17,13 +17,13 @@
 
   <ion-grid text-center>
     <ion-row>
-      <ion-col col-6 *ngFor="let item of items; let i = index;" (click)="doDetailProducts()">
-        <div>
+      <ion-col col-6 *ngFor="let item of items; let i = index;" >
+        <div (click)="doDetailProducts(item)">
           <img src="{{item.images}}">
           <p>{{item.name}} </p>
           <p>Rp {{item.price}}</p>
         </div>
-        <button ion-button block>
+        <button ion-button block (click)="addToCart()">
           <ion-icon name="cart" padding-right></ion-icon>
           Beli
         </button>
