--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -18,12 +18,12 @@
   </ion-item>
 
   <div padding text-left>
-    <button ion-button small clear (click)="resetPassword()">Lupa Password?</button>
+    <button ion-button small clear>Lupa Password?</button>
   </div>
 
   <div text-center>
     <button ion-button block (click)="doLogin()">Masuk</button>
-    <button ion-button outline block (click)="doSignUp()">Daftar Akun</button>
+    <button ion-button outline block>Daftar Akun</button>
   </div>
 </form>
 </ion-content>
