--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
       <button ion-button large clear menuToggle icon-only >
         <ion-icon name='menu'></ion-icon>
       </button>
-          <ion-searchbar></ion-searchbar>
+          <ion-searchbar [(ngModel)]="keyword" (ionInput)="getProduct()"></ion-searchbar>
   </ion-navbar>
 </ion-header>
 
