--- a/src/pages/productdetail/productdetail.html
+++ b/src/pages/productdetail/productdetail.html
@@ -32,5 +32,5 @@
 </ion-content>
 
 <ion-footer no-border text-center padding>
-  <button ion-button round block  (click)="addToCart()"><ion-icon name="cart" padding-right></ion-icon>Beli</button>
+  <button ion-button round block  (click)="addToCart(items?.id)"><ion-icon name="cart" padding-right></ion-icon>Beli</button>
 </ion-footer>
