--- a/src/pages/delivery/delivery.html
+++ b/src/pages/delivery/delivery.html
@@ -14,5 +14,18 @@
 
 
 <ion-content padding>
+  <ion-list>
+    <ion-item>
+      <ion-label>Jasa Pengiriman</ion-label>
+      <ion-select>
+        <ion-option value="nes">JNE Reguler</ion-option>
+        <ion-option value="n64">JNE OKE</ion-option>
+        <ion-option value="ps">JNE YES</ion-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
 
+  
+  <ion-item-divider></ion-item-divider>
+  <h3 padding-left padding-right text-center> Harga : Rp 10.000,- </h3>
 </ion-content>
