--- a/src/pages/product/product.html
+++ b/src/pages/product/product.html
@@ -17,7 +17,7 @@
 
   <ion-grid text-center>
     <ion-row>
-      <ion-col col-6 *ngFor="let item of items; let i = index;" >
+      <ion-col col-6 *ngFor="let item of product; let i = index;" >
         <div (click)="doDetailProducts(item)">
           <img src="{{item.images}}">
           <p>{{item.name}} </p>
@@ -30,5 +30,8 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
+  
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)" *ngIf="page < totalPage">
+    <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Loading more data..."></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
