--- a/src/pages/address/address.html
+++ b/src/pages/address/address.html
@@ -16,35 +16,35 @@
 <ion-content padding>
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Nama Lengkap</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
-      <ion-input type="text" placeholder="Nama Lengkap" style="height: 50px;" [(ngModel)]="recipient.name"></ion-input>
+      <ion-input type="text" placeholder="Nama Lengkap" [(ngModel)]="recipient.name"></ion-input>
   </ion-item>
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Nomor Telepon</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
-      <ion-input type="tel" placeholder="Nomor Telepon" style="height: 50px;" [(ngModel)]="recipient.phone"></ion-input>
+      <ion-input type="tel" placeholder="Nomor Telepon" [(ngModel)]="recipient.phone"></ion-input>
   </ion-item>
-  <!-- <ion-item-divider color="light"><H4 style="font-size: 14px;">Email</H4></ion-item-divider>
-  <ion-item style="padding-bottom: 10px;">
-    <ion-input type="tel" placeholder="Email" style="height: 50px;"></ion-input>
-  </ion-item> -->
-  
+
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Alamat Lengkap</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
       <ion-textarea lineHeight='20' name="notes" placeholder="Alamat Lengkap" [(ngModel)]="recipient.address"></ion-textarea>
   </ion-item>
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Provinsi</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
-      <ion-input type="text" placeholder="Provinsi" readonly style="height: 50px;"></ion-input>
-      <button item-end ion-button small icon-only clear ><ion-icon name="search"></ion-icon></button>
+    <ion-select [(ngModel)]="recipient.province_id" (ionChange)="getCity($event)" okText="Pilih" cancelText="Batal">
+        <ion-option *ngFor="let province of provinces" value="{{province.id}}">{{province.name}}</ion-option>
+    </ion-select>
+      <!-- <button item-end ion-button small icon-only clear ><ion-icon name="search"></ion-icon></button> -->
   </ion-item>
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Kota</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
-      <ion-input type="text" placeholder="Kota" readonly style="height: 50px;"></ion-input>
-      <button item-end ion-button small icon-only clear ><ion-icon name="search"></ion-icon></button>
+    <ion-select [(ngModel)]="recipient.city_id" (ionChange)="getDistrict($event)" okText="Pilih" cancelText="Batal">
+        <ion-option *ngFor="let city of cities"  value="{{city.id}}">{{city.name}}</ion-option>
+    </ion-select>
   </ion-item>
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Kecamatan</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
-      <ion-input type="text" placeholder="Kecamatan" readonly style="height: 50px;"></ion-input>
-      <button item-end ion-button small icon-only clear><ion-icon name="search"></ion-icon></button>
+    <ion-select [(ngModel)]="recipient.district_id" okText="Pilih" cancelText="Batal">
+        <ion-option *ngFor="let district of districts"  value="{{district.id}}">{{district.name}}</ion-option>
+    </ion-select>
   </ion-item>
   <ion-item-divider color="light"><H4 style="font-size: 14px;">Kode Pos</H4></ion-item-divider>
   <ion-item style="padding-bottom: 10px;">
