--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -12,16 +12,19 @@
       <ion-list>
         <ion-item >
           <ion-thumbnail item-start>
-            <img src="">
+            <img src="{{item.img_url}}">
           </ion-thumbnail>
           <h2> {{item.name}} </h2>
           <div text-left class="price">
-            Rp {{item.price}}
+            Rp {{item.price | number}} x {{item.qty}}
+          </div>
+          <div text-right class="subtotal">
+            Rp {{item.subtotal | number}}
           </div>
           <div text-right>  
             <div class="button-bar">
-              <button ion-button small outline color="dark"><ion-icon name="remove"></ion-icon></button>
-              <button ion-button small outline color="dark" (click)="editCart(item)" ><ion-icon name="add"></ion-icon></button>
+              <!-- <button ion-button small outline color="dark"><ion-icon name="remove"></ion-icon></button> -->
+              <button ion-button small outline color="dark" (click)="qtyPrompt(item)" ><ion-icon name="create"></ion-icon></button>
               <button ion-button small color="danger" (click)="removeCart(item)" ><ion-icon name="trash"></ion-icon></button>
             </div>
           </div>
