--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -33,7 +33,7 @@
         
           <ion-item>
               <ion-label>Alamat</ion-label>
-              <ion-textarea placeholder="Alamat" name="address" [(ngModel)]="user.address" readonly></ion-textarea>
+              <ion-textarea placeholder="Alamat" rows="4" name="address" [(ngModel)]="user.address" autosize></ion-textarea>
           </ion-item>
         
           <!-- <ion-item padding-bottom="5px">
