--- a/src/pages/orderdetail/orderdetail.html
+++ b/src/pages/orderdetail/orderdetail.html
@@ -6,13 +6,27 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>orderdetail</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Order Detail</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
-
+  <ion-row>
+    <ion-col>Tanggal Pembelian : </ion-col>
+    <ion-col>Batal Otomatis :</ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>test</ion-col>
+    <ion-col>test</ion-col>
+  </ion-row>
+  <hr>
+  <ion-row>
+    <ion-col>test</ion-col>
+    <ion-col>test</ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col>test</ion-col>
+    <ion-col>test</ion-col>
+  </ion-row>
 </ion-content>
