--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <!--belum login-->
-<ion-tabs tabsPlacement=top>
+<ion-tabs tabsPlacement=bottom>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Best Seller" tabIcon="md-star"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="md-call"></ion-tab>
